--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -14,7 +14,7 @@ $headerFont: 'Permanent Marker', cursive;
 $stickyFont: 'Caveat Brush', cursive;
 $fontWeight: 600;
 $box-shadow: 4px 4px 20px -10px $pencilColor;
-
+$page-height: 1500px;
 //Aaron, please fill these in with whatever the font sizes are going to be, for consistency. These are just placeholder values.
 $h1-size: 2.5em;
 $h2-size: 2.2em;
